# xhec-mlops-project-student

./: .flake8  .gitignore  Dockerfile.app  PR_0.md  PR_1.md  PR_3.md  PR_4.md  README.md  environment.yml  install.sh  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yaml
notebooks/: eda.ipynb  modelling.ipynb
src/modelling/: config.py  deployment.py  main.py  predicting.py  preprocessing.py  training.py  utils.py
src/web_service/: app_config.py  main.py  utils.py
src/web_service/lib/: config.py  inference.py  models.py  predicting.py  preprocessing.py  utils.py
src/web_service/local_objects/: model.pkl  preprocessor.pkl
